--- a/composer.json
+++ b/composer.json
@@ -6,9 +6,10 @@
     "license": "MIT",
     "require": {
         "php": "^7.3|^8.0",
+        "cviebrock/eloquent-sluggable": "^8.0",
         "fruitcake/laravel-cors": "^2.0",
-        "goldspecdigital/laravel-eloquent-uuid": "^8.0",
         "guzzlehttp/guzzle": "^7.0.1",
+        "jamesh/laravel-uuid": "^2.0",
         "laravel/framework": "^8.65",
         "laravel/sanctum": "^2.11",
         "laravel/telescope": "^4.6",
