--- a/package.json
+++ b/package.json
@@ -10,12 +10,15 @@
         "production": "mix --production"
     },
     "devDependencies": {
-        "@tailwindcss/forms": "^0.2.1",
-        "alpinejs": "^3.4.2",
-        "autoprefixer": "^10.1.0",
+        "@tailwindcss/forms": "^0.4.0",
+        "alpinejs": "^3.7.1",
+        "autoprefixer": "^10.4.2",
         "laravel-mix": "^6.0.6",
-        "postcss": "^8.4.1",
-        "postcss-import": "^12.0.1",
-        "tailwindcss": "^2.2.19"
+        "postcss": "^8.4.5",
+        "postcss-import": "^14.0.2",
+        "tailwindcss": "^3.0.13"
+    },
+    "dependencies": {
+        "@tailwindcss/aspect-ratio": "^0.4.0"
     }
 }
