--- a/public/mix-manifest.json
+++ b/public/mix-manifest.json
@@ -1,4 +1,5 @@
 {
     "/js/app.js": "/js/app.js",
+    "/js/stetup-card-page.js": "/js/stetup-card-page.js",
     "/css/app.css": "/css/app.css"
 }
